runs/github.com/SeaPeaMurray/MLND/logs/test-notebook-customer_segments-.ipynb_checkpoints-customer_segments-checkpoint.ipynb-2020-07-17T07.29.txt
[I 200717 07:30:33 inrepo:36] Testing notebook customer_segments/.ipynb_checkpoints/customer_segments-checkpoint.ipynb
[W 200717 07:30:34 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200717 07:30:34 inrepo:60] Using kernel python3 to provide language: python
[I 200717 07:30:34 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# Import libraries necessary for this project
import numpy as np
import pandas as pd
import matplotlib.pyplot as plt
import seaborn as sns
from IPython.display import display # Allows the use of display() for DataFrames
sns.set()
sns.set_context('notebook')

# Import supplementary visualizations code visuals.py
import visuals as vs

# Pretty display for notebooks
%matplotlib inline

# Load the wholesale customers dataset
try:
    data = pd.read_csv("customers.csv")
    data.drop(['Region', 'Channel'], axis = 1, inplace = True)
    print "Wholesale customers dataset has {} samples with {} features each.".format(*data.shape)
except:
    print "Dataset could not be loaded. Is the dataset missing?"
------------------

[0;36m  File [0;32m"<ipython-input-1-a53229088b0b>"[0;36m, line [0;32m20[0m
[0;31m    print "Wholesale customers dataset has {} samples with {} features each.".format(*data.shape)[0m
[0m                                                                            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-a53229088b0b>, line 20)


Container exited with status: {'Error': None, 'StatusCode': 1}
